Increased font size to prevent zoom in effect on mobile

--- a/src/app/barbell-calculator/barbell-calculator.css
+++ b/src/app/barbell-calculator/barbell-calculator.css
@@ -139,8 +139,8 @@ main {
 .barbell-weight-options button, 
 .barbell-weight-options input {
     width: 3.9rem;
-    padding: .5rem .125rem;
-    font-size: .875rem;
+    padding: .375rem .125rem;
+    font-size: 1rem;
     font-weight: 500;
     background-color: rgb(175, 175, 175);
     color: white;
